<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/appearance">

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/app_theme"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="grid"
            app:entries="@array/notes_grid_entries"
            app:entryValues="@array/notes_grid_values"
            app:key="notes_grid"
            app:title="@string/notes_style"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreference
            app:title="@string/hour_format"
            app:defaultValue="false"
            app:key="hour_format" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Notes">
        <SwitchPreference
            app:title="@string/enable_auto_save"
            app:defaultValue="false"
            app:summary="@string/enable_auto_save_desc"
            app:key="notes_auto_save" />
        <SwitchPreference
            app:title="@string/adaptive_notes"
            app:summary="@string/adaptive_notes_desc"
            android:defaultValue="false"
            app:key="notes_adaptive_text"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications">
        <Preference
            app:selectable="false"
            app:persistent="false"
            app:icon="@drawable/ic_info_black"
            app:summary="@string/notifications_desc" />
        <Preference
            app:key="batt_opt"
            app:title="Learn more"
            />
    </PreferenceCategory>


</PreferenceScreen>