<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activity.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_welcome"
        android:textColor="@color/text_primary"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/icon"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/background"
                app:boxStrokeColor="@color/text_secondary"
                android:hint="@string/email"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/text_secondary"
                    android:id="@+id/login_email_editText"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/text_primary"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_username_expandable"
                app:el_duration="500"
                app:el_expanded="false">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginTop="18dp"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/background"
                    app:boxStrokeColor="@color/text_secondary"
                    android:hint="@string/username"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:textColorHint="@color/text_secondary"
                        android:fontFamily="@font/roboto_regular"
                        android:id="@+id/login_username_editText"
                        android:textColor="@color/text_primary"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="18dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/background"
                app:boxStrokeColor="@color/text_secondary"
                android:hint="@string/password"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    android:fontFamily="@font/roboto_regular"
                    android:id="@+id/login_password_editText"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_margin="18dp"
                android:text="@string/login"
                android:id="@+id/login_register_button"
                android:textColor="@android:color/white"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/login_signup_text"
                android:text="First time ? Signup"
                android:textColor="@color/text_secondary"
                android:fontFamily="@font/roboto_regular"
                android:textSize="16sp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>